WhiteHW/Week2/.metadata/.plugins/org.eclipse.cdt.ui/map_values.build.log
02:32:03 **** Incremental Build of configuration Debug for project map_values ****
make all 
Building file: ../src/map_values.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/map_values.d" -MT"src/map_values.o" -o "src/map_values.o" "../src/map_values.cpp"
../src/map_values.cpp:1:1: error: no template named 'set'
set<string> BuildMapValuesSet(const map<int, string>& m) {
^
../src/map_values.cpp:1:5: error: use of undeclared identifier 'string'
set<string> BuildMapValuesSet(const map<int, string>& m) {
    ^
../src/map_values.cpp:1:37: error: no template named 'map'
set<string> BuildMapValuesSet(const map<int, string>& m) {
                                    ^
../src/map_values.cpp:1:46: error: use of undeclared identifier 'string'
set<string> BuildMapValuesSet(const map<int, string>& m) {
                                             ^
../src/map_values.cpp:2:2: error: use of undeclared identifier 'set'
        set<string> xxx;
        ^
../src/map_values.cpp:2:6: error: use of undeclared identifier 'string'
        set<string> xxx;
            ^
../src/map_values.cpp:2:14: error: use of undeclared identifier 'xxx'
        set<string> xxx;
                    ^
../src/map_values.cpp:3:7: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
        for (auto i : m) {
             ^
../src/map_values.cpp:3:14: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
        for (auto i : m) {
                    ^
../src/map_values.cpp:4:3: error: use of undeclared identifier 'xxx'
                xxx.insert(i.second);
                ^
../src/map_values.cpp:6:9: error: use of undeclared identifier 'xxx'
        return xxx;
               ^
2 warnings and 9 errors generated.
make: *** [src/map_values.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

02:32:03 Build Failed. 10 errors, 2 warnings. (took 212ms)

